src/test/ui/hashmap/hashmap-index-mut.stderr
error[E0594]: cannot assign to data in an index of `HashMap<u32, u32>`
  --> $DIR/hashmap-index-mut.rs:5:5
   |
LL |     map[&0] = 1;
   |     ^^^^^^^^^^^ cannot assign
   |
   = help: trait `IndexMut` is required to modify indexed content, but it is not implemented for `HashMap<u32, u32>`
   = help: to modify a `HashMap<u32, u32>`, use `.get_mut()`, `.insert()` or the entry API

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
